Fixed Spacing

--- a/src/components/ContactBox.css
+++ b/src/components/ContactBox.css
@@ -45,6 +45,10 @@
 }
 
 @media screen and (max-width: 500px) {
+    #contact-box > h2 {
+        font-size: 24px;
+    }
+
     #contact-box-grid > h3 {
         font-size: 12px;
     }
